# bdqn-uav-search-n-track

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  evaluate_baseline.py  smoke_test.py  train.py
src/uav_bdqn_belief20.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/uav_bdqn_belief20/agents/: bdqn_agent.py  replay_buffer.py
src/uav_bdqn_belief20/controllers/: mission_controller.py
src/uav_bdqn_belief20/envs/: drone_memory.py  search_track_env.py
src/uav_bdqn_belief20/models/: networks.py
